<resources>
    <string name="app_name" translatable="false">Practica 2</string>
    <string name="play">Play</string>
    <string name="ranking" translatable="false">Ranking</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="my_photo">My photo</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="where_are_we">Where are we?</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_email">Enter your email</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="regEmail">Insert your email</string>
    <string name="registerTextView">Register</string>
    <string name="insert_your_code">Insert your code</string>
    <string name="register">Register</string>
    <string name="getCode">Get Code</string>
    <string name="registerTitle">Register</string>
    <string name="input_email">Input email</string>
    <string name="regEmailBtn">Get CODE</string>
    <string name="titleCode">Code sent to your email</string>
    <string name="hintCode">Input code</string>
    <string name="btnMessage">Send Message</string>
    <string name="edMessage">Input message</string>
    <string name="tvAlertMessage">Message sent!</string>
    <string name="inputSimScore">Input your score</string>
    <string name="btnScore">Send score</string>
    <string name="inputSimLevel">Input the level you played</string>
    <string name="tvScoreAlert">Score sent!</string>
    <string name="tvAskUnregister">Do you want to delete this account?</string>
    <string name="btnDeleteYes" translatable="false">Yes</string>
    <string name="btnDeleteNo" translatable="false">No</string>
    <string name="tvAskFullUnregister">Do you also want to delete all data?</string>
    <string name="btnFullDeleteY" translatable="false">Yes</string>
    <string name="btnFullDeleteN" translatable="false">No</string>
    <string name="btnDeleteAcc">Delete account</string>
</resources>
