<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerDetailActivity">

    <TextView
        android:id="@+id/tvPlayerNameDet"
        android:layout_width="216dp"
        android:layout_height="34dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayerImgDet" />

    <ImageView
        android:id="@+id/ivPlayerImgDet"
        android:layout_width="209dp"
        android:layout_height="222dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="238dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlayerNameDet">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edMessage" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvAlertMessage"
        android:layout_width="240dp"
        android:layout_height="57dp"
        android:text="@string/tvAlertMessage"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMessage"
        app:layout_constraintVertical_bias="0.17000002" />
</android.support.constraint.ConstraintLayout>